--- a/roles/audit/tasks/lynis.yml
+++ b/roles/audit/tasks/lynis.yml
@@ -23,3 +23,11 @@
       {{ lynis_report.stdout|regex_replace("\u001b\[[0-9]{1,3}C", '', multiline=True) }}
     mode: '0600'
   delegate_to: localhost
+
+- name: Copy lynis dat report
+  become: false
+  ansible.builtin.fetch:
+    src: /var/log/lynis-report.dat
+    dest: "{{ audit_dir }}/{{ inventory_hostname }}-lynis-report.dat"
+    mode: '0600'
+  delegate_to: localhost
