--- a/roles/audit/tasks/lynis.yml
+++ b/roles/audit/tasks/lynis.yml
@@ -18,7 +18,7 @@
 - name: Create report from output
   become: false
   ansible.builtin.copy:
-    dest: "{{ audit_dir }}/{{ inventory_hostname }}-lynis-report.txt"
+    dest: "{{ audit_dir }}/lynis-report.txt"
     content: >
       {{ lynis_report.stdout|regex_replace("\u001b\[[0-9]{1,3}C", '', multiline=True) }}
     mode: '0600'
@@ -28,5 +28,5 @@
   become: false
   ansible.builtin.fetch:
     src: /var/log/lynis-report.dat
-    dest: "{{ audit_dir }}/{{ inventory_hostname }}-lynis-report.dat"
+    dest: "{{ audit_dir }}/lynis-report.dat"
     mode: '0600'
