--- a/roles/security/tasks/auditd.yml
+++ b/roles/security/tasks/auditd.yml
@@ -1,10 +1,17 @@
 ---
 # tasks file for auditd
 
-- name: Install auditd
+- name: Install auditd RedHat
   ansible.builtin.dnf:
     name: audit
     state: present
+  when: ansible_facts['os_family'] == "RedHat"
+
+- name: Install auditd Debian
+  ansible.builtin.apt:
+    name: auditd
+    state: present
+  when: ansible_facts['os_family'] == "Debian"
 
 - name: Start auditd
   ansible.builtin.service:
