--- a/extensions/molecule/security/prepare.yml
+++ b/extensions/molecule/security/prepare.yml
@@ -32,3 +32,7 @@
         state: directory
         mode: '0750'
       when: ansible_facts['os_family'] == "Debian"
+    - name: Create default gradle file
+      ansible.builtin.copy:
+        content: 'GRUB_CMDLINE_LINUX=""'
+        dest: /etc/default/grub
