--- a/extensions/molecule/requirements.txt
+++ b/extensions/molecule/requirements.txt
@@ -1,6 +1,5 @@
-ansible==10.1.0
 ansible-compat==24.6.1
-ansible-core==2.17.1
+ansible-core==2.16.8
 attrs==23.2.0
 bracex==2.4
 certifi==2024.6.2
@@ -36,5 +35,6 @@ rich==13.7.1
 rpds-py==0.18.1
 selinux==0.3.0
 subprocess-tee==0.4.2
+testinfra==6.0.0
 urllib3==2.2.2
 wcmatch==8.5.2
