--- a/roles/nginx/tasks/main.yml
+++ b/roles/nginx/tasks/main.yml
@@ -14,7 +14,7 @@
 
 - name: Nginx configuration
   ansible.builtin.template:
-    src: nginx/nginx-internal.conf.j2
+    src: nginx-internal.conf.j2
     dest: /etc/nginx/nginx.conf
     owner: root
     group: root
