--- a/roles/security/tasks/crowdsec-install-redhat.yml
+++ b/roles/security/tasks/crowdsec-install-redhat.yml
@@ -4,13 +4,13 @@
 - name: Download script
   become: false
   ansible.builtin.get_url:
-    url: "https://packagecloud.io/install/repositories/crowdsec/crowdsec/script.rpm.sh"
-    dest: /tmp/script.rpm.sh
+    url: "https://install.crowdsec.net"
+    dest: /tmp/script.sh
     mode: '700'
 
 - name: Execute install crowdsec repository
   ansible.builtin.command:
-    cmd: "/tmp/script.rpm.sh"
+    cmd: "/tmp/script.sh"
 
 - name: Install crowdsec
   ansible.builtin.dnf:
