--- a/.github/workflows/molecule.yml
+++ b/.github/workflows/molecule.yml
@@ -17,6 +17,7 @@ jobs:
           - bash_profile
           - nginx
           - security
+          - prepare
     steps:
       - name: Checkout
         uses: actions/checkout@v4
