--- a/.github/workflows/molecule.yml
+++ b/.github/workflows/molecule.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Set up Python 3
         uses: actions/setup-python@v5
         with:
-          python-version: 3.x
+          python-version: '3.10'
       - name: Install Molecule dependencies
         run: pip3 install -r ./extensions/molecule/requirements.txt
       - name: Install requirements
