--- a/galaxy.yml
+++ b/galaxy.yml
@@ -27,9 +27,9 @@ tags:
   - firewalld
 
 dependencies:
-  nginxinc.nginx_core: ">=0.8.0"
-  community.general: ">=8.6.2"
-  community.crypto: ">=1.9.25"
+  community.general: "10.2.0"
+  community.crypto: "2.23.0"
+  ansible.posix: "2.0.0"
 
 repository: https://github.com/pgalonza/linux-collection
 
