fix: fix ci errors

--- a/extensions/molecule/prepare/converge.yml
+++ b/extensions/molecule/prepare/converge.yml
@@ -7,3 +7,5 @@
       ansible.builtin.include_role:
         name: pgalonza.linux.prepare
         tasks_from: main.yml
+      vars:
+        ansible_user: ansible
