--- a/roles/security/tasks/sshd.yml
+++ b/roles/security/tasks/sshd.yml
@@ -19,5 +19,5 @@
     owner: root
     group: root
     mode: 0600
-    validate: /usr/sbin/sshd -t -f %s
+    # validate: /usr/sbin/sshd -t -f %s
   notify: restart_sshd
