--- a/extensions/molecule/prepare/molecule.yml
+++ b/extensions/molecule/prepare/molecule.yml
@@ -10,7 +10,7 @@ platforms:
       - /sys/fs/cgroup:/sys/fs/cgroup:rw
     command: /usr/sbin/init
     dockerfile: ../common/Dockerfile-systemd.j2
-  - name: Debian
+  - name: Ubuntu
     image: docker.io/ubuntu:22.04
     platform: x86_64
     privileged: true
