--- a/extensions/molecule/requirements.txt
+++ b/extensions/molecule/requirements.txt
@@ -1,39 +1,36 @@
-ansible-compat==24.6.1
-ansible-core==2.16.8
-attrs==23.2.0
-bracex==2.4
-certifi==2024.6.2
-cffi==1.16.0
-charset-normalizer==3.3.2
-click==8.1.7
+ansible-compat==25.0.0
+ansible-core==2.18.1
+attrs==24.3.0
+bracex==2.5.post1
+certifi==2024.12.14
+cffi==1.17.1
+charset-normalizer==3.4.1
+click==8.1.8
 click-help-colors==0.9.4
-cryptography==42.0.8
+cryptography==44.0.0
 distro==1.9.0
 docker==7.1.0
 enrich==1.2.7
-idna==3.7
-iniconfig==2.0.0
-Jinja2==3.1.4
-jsonschema==4.22.0
-jsonschema-specifications==2023.12.1
+idna==3.10
+Jinja2==3.1.5
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
 markdown-it-py==3.0.0
-MarkupSafe==2.1.5
+MarkupSafe==3.0.2
 mdurl==0.1.2
-molecule==24.6.0
-molecule-plugins==23.5.3
-packaging==24.1
+molecule==24.12.0
+molecule-plugins==23.6.0
+packaging==24.2
 pluggy==1.5.0
 pycparser==2.22
-Pygments==2.18.0
-pytest==8.2.2
-pytest-testinfra==10.1.1
-PyYAML==6.0.1
+Pygments==2.19.1
+PyYAML==6.0.2
 referencing==0.35.1
 requests==2.32.3
 resolvelib==1.0.1
-rich==13.7.1
-rpds-py==0.18.1
+rich==13.9.4
+rpds-py==0.22.3
 selinux==0.3.0
 subprocess-tee==0.4.2
-urllib3==2.2.2
-wcmatch==8.5.2
+urllib3==2.3.0
+wcmatch==10.0
