fix: 'auto' is the only valid option for 'private_key_format'

--- a/extensions/molecule/prepare/prepare.yml
+++ b/extensions/molecule/prepare/prepare.yml
@@ -25,8 +25,7 @@
       when: ansible_facts['os_family'] == "Debian"
     - name: Generate an OpenSSH keypair
       community.crypto.openssh_keypair:
-        path: /opt/{{ item }}
-        private_key_format: ssh
+        path: "/opt/{{ item }}"
       loop:
         - id_rsa
         - ansible_id_rsa
