--- a/extensions/molecule/prepare/prepare.yml
+++ b/extensions/molecule/prepare/prepare.yml
@@ -25,7 +25,7 @@
       when: ansible_facts['os_family'] == "Debian"
     - name: Create test user
       ansible.builtin.user:
-        name: ssh_user
+        name: test_user
         create_home: true
     - name: Generate an OpenSSH keypair
       community.crypto.openssh_keypair:
