fix: start if not active

--- a/roles/security/handlers/main.yml
+++ b/roles/security/handlers/main.yml
@@ -17,7 +17,7 @@
 
 - name: Reload crowdsec
   ansible.builtin.systemd:
-    state: reloaded
+    state: restarted
     name: crowdsec
   listen: restart_crowdsec
 
